syntax = "proto3";
package dev.roy.product.api;
import "resources.proto";

service ProductService {
  rpc getProduct(GetProductRequest) returns (GetProductResponse);
}